--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -108,7 +108,7 @@ hr { height: 1px; background-color: #9C9C9C; border: 0; margin: .9em 0; }
 strong.highlight { background-color: #CCE0FF; padding: 1px; }
 
 /* pre */
-pre { border: 1pt solid #AEBDCC; background-color: #F3F5F7; padding: 5pt;
+pre { border: 1pt solid #AEBDCC; background-color: #F3F5F7; padding: 5pt; clear: both;
             font-family: courier, monospace; margin: .33em 0; white-space: pre; }
 pre.comment { background-color: #CCC; color: red; padding: 0; margin: 0; border: 0; }
 pre.comment:before { content: url(../img/attention.png); }
@@ -276,9 +276,9 @@ TD.tip { text-align: left; }
 .blue { background-color: #CCF; }
 .yellow { background-color: #FFF29F; }
 .orange { background-color: #FFD59B; }
-.solid { border: 2px solid #000; padding: 2px; }
-.dashed { border: 2px dashed #888; padding: 2px; }
-.dotted { border: 2px dotted #000; padding: 2px; }
+.solid { border: 2px solid #000; padding: 2px; clear: both; }
+.dashed { border: 2px dashed #888; padding: 2px; clear: both; }
+.dotted { border: 2px dotted #000; padding: 2px; clear: both; }
 .left { text-align: left; }
 .center { text-align: center; }
 .right { text-align: right; }
@@ -291,7 +291,7 @@ TD.tip { text-align: left; }
 #moin-content div.tip,
 #moin-content div.warning { border: 1px solid #E5E5E5; background-color: #F9F9FF;
             background-repeat: no-repeat; background-position: 8px 8px;  color: black;
-            margin: 10px 30px 10px 30px; min-height: 64px; padding-left: 64px; }
+            margin: 10px 30px 10px 30px; min-height: 64px; padding-left: 64px; clear: both; }
 #moin-content div.caution p,
 #moin-content div.important p,
 #moin-content div.note p,
