--- a/MoinMoin/templates/copy.html
+++ b/MoinMoin/templates/copy.html
@@ -6,10 +6,10 @@
 <form action="{{ url_for('frontend.copy_item', item_name=item.name) }}" method="POST" enctype="multipart/form-data">
     <dl>
         <dt><label for="target">{{ _("Target") }}</label></dt>
-        <dd><input type="text" id="target" name="target" size="80" maxlength="200" value="{{ item.name }}" /></dd>
+        <dd><input type="text" id="target" name="target" size="80" maxlength="200" value="{{ target }}" /></dd>
         
         <dt><label for="comment">{{ _("Comment") }}</label></dt>
-        <dd><input type="text" id="comment" name="comment" size="80" maxlength="200" value="" /></dd>
+        <dd><input type="text" id="comment" name="comment" size="80" maxlength="200" value="{{ comment }}" /></dd>
     </dl>
 
     <input class="button" type="submit" name="button_ok" value="{{ _('Copy') }}" />
