--- a/MoinMoin/templates/login.html
+++ b/MoinMoin/templates/login.html
@@ -12,10 +12,10 @@
   {{ gen.input(form['submit'], type='hidden') }}
 
   {% if 'username' in login_inputs %}
-  {{ forms.render_field(gen, form['username'], 'text') }}
+  {{ forms.render_field(gen, form['username'], 'text', 'required') }}
   {% endif %}
   {% if 'password' in login_inputs %}
-  {{ forms.render_field(gen, form['password'], 'password') }}
+  {{ forms.render_field(gen, form['password'], 'password', 'required') }}
   {% endif %}
 
   <input type="submit" value="{{ _('Log in') }}" />
