--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -210,13 +210,25 @@ input#comment { border: 1px solid #8cacbb; display: inline; margin: .33em 0; pad
 .moin-hist-rev { margin: 0; }
 #moin-global-history,
 #moin-page-history { font-size: 75%; }
-#moin-global-history tr,
-#moin-page-history tr { border: 1px solid #4D7DA9; }
+#moin-page-history tr { border: 1px solid #4D7DA9; } 
 #moin-global-history th,
 #moin-page-history th { background-color: #81BBF2; border: 0px; font-size: 1.12em; padding: 6px .5em; text-align: left; }
-#moin-global-history td,
+#moin-global-history td {  border: 0px; vertical-align: top;text-align: left; }
 #moin-page-history td { background-color: #E6EAF0; border: 0px; vertical-align: top; }
 .moin-wordbreak { word-break: break-all;  word-wrap: break-word; } /* Firefox needs javascript assistance within tables */
+.moin-history-time { width: 10%; }
+.moin-history-contenttype { width: 18%; }
+.moin-history-editorinfo { width: 10%; }
+.moin-history-comment { width: 18%; }
+.moin-action { width: 2%; }
+.moin-history-container { border: 1px solid #4D7DA9; }
+.moin-history-container-header { background: #81BBF2; margin: 0px; padding: 3px; color: #3b3131; border-bottom: 1px solid #4D7DA9; }
+.moin-history-container-body { padding: 4px; }
+.moin-history-save:before { content: url('../img/moin-edit.png'); }
+.moin-history-trash:before { content: url('../img/moin-deleted.png'); }
+.moin-history-rename:before { content: url('../img/moin-renamed.png'); }
+.moin-history-copy:before { content: url('../img/moin-new.png'); }
+.moin-integer { width: 2%; }
 
 /* diffs */
 .moin-diff { width:99%; table-layout: fixed; }
