--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -216,17 +216,23 @@ input#comment { border: 1px solid #8cacbb; display: inline; margin: .33em 0; pad
 .moin-wordbreak { word-break: break-all;  word-wrap: break-word; } /* Firefox needs javascript assistance within tables */
 .moin-history-time { width: 10%; }
 .moin-history-contenttype { width: 18%; }
-.moin-history-editorinfo { width: 10%; }
-.moin-history-comment { width: 18%; }
+.moin-history-editorinfo { width: 17%; }
+.moin-history-comment { width: 25%; }
 .moin-action { width: 2%; }
 .moin-history-container { border: 1px solid #4D7DA9; }
 .moin-history-container-header { background: #81BBF2; margin: 0px; padding: 3px; color: #3b3131; border-bottom: 1px solid #4D7DA9; }
-.moin-history-container-body { padding: 4px; }
+.moin-history-container-body { padding: 4px; font-size: 14px; }
 .moin-history-save:before { content: url('../img/moin-edit.png'); }
 .moin-history-trash:before { content: url('../img/moin-deleted.png'); }
 .moin-history-rename:before { content: url('../img/moin-renamed.png'); }
 .moin-history-copy:before { content: url('../img/moin-new.png'); }
 .moin-integer { width: 2%; }
+.moin-history-links { width: 5%; }
+.moin-history-links a { display:block; margin-bottom: 4px; }
+.moin-history-editortext,
+.moin-history-links span,
+.moin-history-comment span { color:#544E4F;  display:block; margin-bottom: 5px; }
+
 
 /* diffs */
 .moin-diff { width:99%; table-layout: fixed; }
