--- a/MoinMoin/templates/global_history.html
+++ b/MoinMoin/templates/global_history.html
@@ -9,63 +9,40 @@
 {% block content %}
 <h1>{{ _("Global History") }}</h1>
     <div id="moin-global-history">
-        {% for revs in history %}
+        {% for rev_date, revs in history %}
             <div class="moin-history-container"> 
-                {% set rev_date = revs[0] %}
                 <h2 class="moin-history-container-header">{{ rev_date }}</h2>
                 <div class="moin-history-container-body">
-                    {% set revs = revs[1:] %}
                     <table>
                     {% for rev in revs %}
-                     <tr>
-                        {% set item_name = rev[0] %}
-                        {% set timestamp = rev[1] %}
-                        {% set action = rev[2] %}
-                        {% set contenttype = rev[4] %}
-                         <td class="moin-action moin-history-{{ rev[2]|lower }}" title="{{ rev[2] }}">&nbsp;</td>
-                         <td class="moin-history-item"><a href="{{ url_for('frontend.show_item', item_name=rev[0]) }}">{{ rev[0] }}</a>
-                         <td class="moin-history-time">{{ rev[1]|timeformat }}</td>
-                         <td class="moin-wordbreak moin-history-contenttype">{{ rev[4] }}</td>
-                         <td class="moin-history-links">
-                             {% set revnos = rev[5] %}
-                             {% for revno in revnos %}
-                                 {% if revno - 1 > -1 %}
-                                     <a href="{{ url_for('frontend.diff', item_name=rev[0],rev1=revno,rev2=revno-1) }}">{{ _("[%(revno)s]", revno=(revno-1)) }}</a>
-                                 {% else %}
-                                     <span>{{ _("None") }}</span>
-                                 {% endif %}
-                             {% endfor %}
-                         </td>
-                         <td class="moin-wordbreak moin-history-editorinfo">
-                             {% set editors = rev[6] %}
-                             {% for editor in editors %}
-			         <span class="moin-history-editortext">
-                                 {% set info = editor[0] %}
-                                 {% set position = editor[1] %}
-			         {% if "uri" in info %}
-			             <a href="{{ info["uri"] }}" class="{{ info["css"] }}" title="{{ info["title"] }}">
-			         {% elif "email" in info %}
-			             <a href="mailto:{{ info["email"] }}" class="{{ info["css"] }}" title="{{ info["title"] }}">
-			         {% else %}
-			             <span class="{{ info["css"] }}" title="{{ info["title"] }}">
-			         {% endif %}
-			         {{ info["text"] }}
-			         {% if ("uri" in info)  or ("email" in info) %}
-			             </a>
-			         {% else %}
-			             </span>
-			         {% endif %}
-			         {{ _("%(position)s",position=position) }}
-			         </span>
-			     {% endfor %}
-                         </td>
-                         <td class="moin-wordbreak moin-history-comment">
-                             {% set comments = rev[7] %}
-                             {% for comment in comments %}
-                                 <span>{{ comment }}</span>
-			     {% endfor %}
-                        </td>
-                     </tr>
+                        <tr>
+                            <td class="moin-action moin-history-{{ rev.action|lower }}" title="{{ rev.action }}">&nbsp;</td>
+                            <td class="moin-history-item"><a href="{{ url_for('frontend.show_item', item_name=rev.item_name) }}">{{ rev.item_name }}</a></td>
+                            <td class="moin-history-time">{{ rev.timestamp|timeformat }}</td>
+                            <td class="moin-wordbreak moin-history-contenttype">{{ rev.contenttype }}</td>
+                            <td class="moin-history-links">
+                                {% for revno in rev.revnos %}
+                                    {% if revno %}
+                                        <a href="{{ url_for('frontend.diff', item_name=rev.item_name, rev1=revno, rev2=revno-1) }}">[{{ revno }}]</a>
+                                    {% else %}
+                                        <span>[0]</span>
+                                    {% endif %}
+                                {% endfor %}
+                            </td>
+                            <td class="moin-wordbreak moin-history-editorinfo">
+                                {% for info, position in rev.editors %}
+                                    <span class="moin-history-editortext">
+                                    {{ utils.show_editor_info(info) }}
+                                    {{ position }}
+                                    </span>
+                                {% endfor %}
+                            </td>
+                            <td class="moin-wordbreak moin-history-comment">
+                               {% for comment in rev.comments %}
+                                   <span>{{ comment }}</span>
+                               {% endfor %}
+                            </td>
+                        </tr>
                     {% endfor %}
                     </table>
                 </div>
