Bookmark functionality added for the global history results

--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -220,7 +220,9 @@ input#comment { border: 1px solid #8cacbb; display: inline; margin: .33em 0; pad
 .moin-history-comment { width: 25%; }
 .moin-action { width: 2%; }
 .moin-history-container { border: 1px solid #4D7DA9; }
-.moin-history-container-header { background: #81BBF2; margin: 0px; padding: 3px; color: #3b3131; border-bottom: 1px solid #4D7DA9; }
+.moin-history-container-header { background: #81BBF2; margin: 0px; padding: 4px; color: #3b3131; border-bottom: 1px solid #4D7DA9; }
+.moin-history-container-header h2 { display: inline; }
+.moin-history-container-header a.bookmark-link { margin-left: 10px; color: #3b3131; }
 .moin-history-container-body { padding: 4px; font-size: 14px; }
 .moin-history-save:before { content: url('../img/moin-edit.png'); }
 .moin-history-trash:before { content: url('../img/moin-deleted.png'); }
