--- a/MoinMoin/templates/global_history.html
+++ b/MoinMoin/templates/global_history.html
@@ -8,10 +8,29 @@
 
 {% block content %}
 <h1>{{ _("Global History") }}</h1>
+    {% if user.valid  %}
+    <div id="moin-set-bookmark">
+        {% if bookmark_time %}
+            {{ _("Bookmark (currently set to %(bookmark)s). ", bookmark=bookmark_time|datetimeformat) }} 
+            <a href="{{ url_for('frontend.bookmark', time='del') }}">{{ _("Delete bookmark") }}</a>
+        {% else %}
+            {{ _("Bookmark (not set). ") }}<a href="{{ url_for('frontend.bookmark', time=current_timestamp) }}">{{ _("Set bookmark") }}</a> 
+        {% endif %}
+    {% endif %}
+    </div>
     <div id="moin-global-history">
         {% for rev_date, revs in history %}
+           {% set  latest_rev = revs[0] %}
+           {% set  latest_timestamp = latest_rev.timestamp %}
             <div class="moin-history-container"> 
-                <h2 class="moin-history-container-header">{{ rev_date }}</h2>
+                <div class="moin-history-container-header">
+                    <span>
+                        <h2>{{ rev_date }}</h2>
+                        {% if user.valid %}
+                        <a class="bookmark-link" href="{{ url_for('frontend.bookmark', time=latest_timestamp) }}">{{ _("Set bookmark") }}</a>
+                        {% endif %}
+                   </span>
+                </div>
                 <div class="moin-history-container-body">
                     <table>
                     {% for rev in revs %}
@@ -49,4 +68,7 @@
             </div>
         {% endfor %}
     </div>
+   {% if bookmark_time %}
+       <div id="moin-bookmark-reached">{{ _("Bookmark reached") }}</div>
+   {% endif %}
 {% endblock %}
