--- a/MoinMoin/templates/history.html
+++ b/MoinMoin/templates/history.html
@@ -2,7 +2,16 @@
 {% import "utils.html" as utils %}
 {% block content %}
     {% if history %}
+    <div class='moin-offset-links'>
+        {% if previous_offset >= 0 %}
+            <a href="{{ url_for('frontend.history', item_name=item_name, offset=previous_offset) }}" title="{{ _("Previous") }}">&laquo;</a>
+        {% endif %}
+        {% if offset %}
+            <a href="{{ url_for('frontend.history', item_name=item_name, offset=offset) }}" title="{{ _("Next") }}">&raquo;</a>
+        {% endif %}
+    </div>
     <h1>{{ _("History of '%(item_name)s'", item_name=item_name) }}</h1>
+    <div class="moin-clr"></div>
     <form action="{{ url_for('frontend.diff', item_name=item_name) }}" method="GET">
         <div id="moin-page-history">
         <table>
