diff link added on global history page, to view diff between latest revision and first revision

--- a/MoinMoin/templates/global_history.html
+++ b/MoinMoin/templates/global_history.html
@@ -44,7 +44,10 @@
                     <table>
                     {% for rev in revs %}
                         <tr>
-                            <td class="moin-action moin-history-{{ rev.action|lower }}" title="{{ rev.action }}">&nbsp;</td>
+                            {% set item_latest_revno = rev.revnos[0] %}
+                            <td class="moin-action" title="{{ _("DIFF") }}">                                
+                                <a href="{{ url_for('frontend.diff', item_name=rev.item_name, rev1=item_latest_revno, rev2=0) }}" class="moin-history-{{ rev.action|lower }}"></a>
+                            </td>
                             <td class="moin-history-item"><a href="{{ url_for('frontend.show_item', item_name=rev.item_name) }}">{{ rev.item_name }}</a></td>
                             <td class="moin-history-time">{{ rev.timestamp|timeformat }}</td>
                             <td class="moin-wordbreak moin-history-contenttype">{{ rev.contenttype }}</td>
