--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -219,6 +219,7 @@ input#comment { border: 1px solid #8cacbb; display: inline; margin: .33em 0; pad
 .moin-history-editorinfo { width: 17%; }
 .moin-history-comment { width: 25%; }
 .moin-action { width: 2%; }
+.moin-action a:hover { text-decoration: none; }
 .moin-history-container { border: 1px solid #4D7DA9; }
 .moin-history-container-header { background: #81BBF2; margin: 0px; padding: 4px; color: #3b3131; border-bottom: 1px solid #4D7DA9; }
 .moin-history-container-header h2 { display: inline; }
