--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -211,13 +211,13 @@ input#comment { border: 1px solid #8cacbb; display: inline; margin: .33em 0; pad
 #moin-page-history tr { border: 1px solid #4D7DA9; } 
 #moin-global-history th,
 #moin-page-history th { background-color: #81BBF2; border: 0px; font-size: 1.12em; padding: 6px .5em; text-align: left; }
-#moin-global-history td {  border: 0px; vertical-align: top;text-align: left; }
+#moin-global-history td {  border: 0px; vertical-align: top;text-align: left; padding: 0.4em 0.3em; }
 #moin-page-history td { background-color: #E6EAF0; border: 0px; vertical-align: top; }
 .moin-wordbreak { word-break: break-all;  word-wrap: break-word; } /* Firefox needs javascript assistance within tables */
 .moin-history-time { width: 10%; }
 .moin-history-contenttype { width: 18%; }
 .moin-history-editorinfo { width: 17%; }
-.moin-history-comment { width: 25%; }
+.moin-history-comment { width: 30%; }
 .moin-action { width: 2%; }
 .moin-action a:hover { text-decoration: none; }
 .moin-history-container { border: 1px solid #4D7DA9; }
@@ -372,13 +372,15 @@ a.moin-action:before { content: url(../img/moin-action.png); margin: 0 0.2em; }
 
 /* icons for links to different mimetypes */
 /* major types */
-a.moin-mime-text:before {}
-a.moin-mime-image:before { content: url(../img/moin-ftp.png); margin: 0 0.2em; }
-a.moin-mime-audio:before { content: url(../img/moin-ftp.png); margin: 0 0.2em; }
-a.moin-mime-video:before { content: url(../img/moin-ftp.png); margin: 0 0.2em; }
-a.moin-mime-application:before { content: url(../img/moin-ftp.png); margin: 0 0.2em; }
+a.moin-mime-text:before { content: url(../img/moin-text.png); margin: 0 0.2em; }
+a.moin-mime-image:before { content: url(../img/moin-image.png); margin: 0 0.2em; }
+a.moin-mime-audio:before { content: url(../img/moin-audio.png); margin: 0 0.2em; }
+a.moin-mime-video:before { content: url(../img/moin-video.png); margin: 0 0.2em; }
+a.moin-mime-application:before { content: url(../img/moin-application.png); margin: 0 0.2em; }
 /* some common specific types */
-a.moin-mime-pdf:before { content: url(../img/moin-ftp.png); margin: 0 0.2em; }
+a.moin-mime-pdf:before { content: url(../img/moin-pdf.png); margin: 0 0.2em; }
+a.moin-mime-package:before { content: url(../img/moin-package.png); margin: 0 0.2em; }
+a.moin-mime-drawing:before { content: url(../img/moin-drawing.png); margin: 0 0.2em; }
 
 /* Flash messages used by Flask */
 .moin-flash { margin: 0; padding: 6px 6px 6px 38px; background-color: #f0f2f5;
