--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -240,6 +240,15 @@ input#comment { border: 1px solid #8cacbb; display: inline; margin: .33em 0; pad
 .moin-offset-links a:hover { box-shadow: 0px 0px 12px #81BBF2; }
 .moin-clr { clear: both; }
 
+/* global index page */
+#moin-letters { width: 90%; margin: 5px auto; text-align: center; }
+#moin-letters a { display: inline-block; margin: 0; padding: 4px 5px; }
+#moin-letters a:hover,
+#moin-letters a.selected { background: #4477FF; border-radius: 5px; color: #FFFFFF; text-decoration: none; }
+#moin-global-index { width: 100%; margin-left: 0.5em; }
+#moin-global-index div { float: left; width: 15em; }
+.moin-more-index:before { content: url("../img/moin-expand.png"); }
+
 /* diffs */
 .moin-diff { width:99%; table-layout: fixed; }
 .moin-diff-header { vertical-align: top; font-size: 92%; }
