--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -240,14 +240,12 @@ input#comment { border: 1px solid #8cacbb; display: inline; margin: .33em 0; pad
 .moin-offset-links a:hover { box-shadow: 0px 0px 12px #81BBF2; }
 .moin-clr { clear: both; }
 
-/* global(item) index page */
-#moin-letters { width: 90%; margin: 5px auto; text-align: center; }
-#moin-letters a { display: inline-block; margin: 0; padding: 4px 5px; }
-#moin-letters a:hover,
-#moin-letters a.selected { background: #4477FF; border-radius: 5px; color: #FFFFFF; text-decoration: none; }
-#moin-global-index,
+/* item index page */
+#moin-initials { width: 90%; margin: 5px auto; text-align: center; }
+#moin-initials a { display: inline-block; margin: 0; padding: 4px 5px; }
+#moin-initials a:hover,
+#moin-initials a.selected { background: #4477FF; border-radius: 5px; color: #FFFFFF; text-decoration: none; }
 .moin-item-index { width: 100%; margin-left: 0.5em; }
-#moin-global-index div,
 .moin-item-index div { float: left; width: 15em; }
 .moin-select-contenttypes { float: right; position: relative; width: 14em; }
 .moin-select-contenttypes .moin-contenttypes-wrapper { position: absolute; top: 0; left: 0; color: #342D7E; background: #FFFFFF; border: 1px solid #342D7E; width: 14em; }
