restored Start button for individual files, but made it invisible

--- a/MoinMoin/templates/forms.html
+++ b/MoinMoin/templates/forms.html
@@ -80,6 +80,7 @@ Helpers for using flatland with jinja2 to create html forms.
         </div>
         <table class="files">
             <tr class="file_upload_template" style="display:none;">
+                <td class="file_upload_start"><button>{{ _("Start") }}</button></td>
                 <td class="file_upload_cancel"><button>{{ _("Cancel") }}</button></td>
                 <td class="file_name"></td>
                 <td class="file_upload_progress"><div></div></td>
